discussion/kv_engine/155607/155607_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Defrag control sleep

Change-Id: I78336b50a00955f243b264adba9d7cd6a73d964b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-15 12:31:33.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 12:54:33.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11471/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11471/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11898/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19486/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19486/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36894/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tools\pid_runner.cc(131): error C2039: "max": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31522/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:224:10:
error: call to deleted constructor of "std::atomic<unsigned long>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31522/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9904/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:224:10: error: call to deleted constructor of "std::atomic<unsigned long>" [clang-diagnostic-error]
    auto lowWater = stats.mem_low_wat;
         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/atomic:828:7: note: "atomic" has been explicitly marked deleted here
      atomic(const atomic&) = delete;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9904/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/defragmenter.cc:224:10:
error: call to deleted constructor of "std::atomic<unsigned long>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9904/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11624/ : FAILURE

Compile error at [2021-06-15T12:50:58.667Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/defragmenter.cc:224:27:
error: use of deleted function ?std::atomic<long unsigned int>::atomic(const std::atomic<long unsigned int>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10552/ : FAILURE

Compile error at [2021-06-15T12:34:18.234Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/defragmenter.cc:224:10:
error: call to implicitly-deleted copy constructor of "std::__1::atomic<unsigned long>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10552/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/410/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
